Realized the whole conclusion hadn't been spellchecked.

--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -3,7 +3,7 @@
 
 \section{Objective}
 
-The objective is to plot the output characteristic of a common-emmitter transistor circuit, and use it to determine the current gain and output conductance.
+The objective is to plot the output characteristic of a common-emitter transistor circuit, and use it to determine the current gain and output conductance.
 
 \section{Equipment}
 
@@ -39,7 +39,7 @@ The objective is to plot the output characteristic of a common-emmitter transist
 
 \section{Procedure}
 
-The following steps were observed to plot the output characteristic of a common emmitter transistor circuit:
+The following steps were observed to plot the output characteristic of a common emitter transistor circuit:
 
 \begin{enumerate}
 \item Construct the circuit of Figure~\ref{fig:circuit}.  Use the +\SI{6}{V} power supply for $V_{BB}$ and the +\SI{25}{V} supply for $V_{CC}$.  Be sure to keep the connection distance between the capacitor and the transistor short.  Use the HP multimeter to measure the base current ($I_B$) on the source side of the capacitor and Fluke multimeters to measure the collector voltage and current ($V_{CE}$ and $I_C$).
@@ -238,14 +238,15 @@ The following steps were observed to plot the output characteristic of a common 
   \caption{\label{tab:hoe} $h_{oe}$ vs. $r_o$}
 \end{table}
 
+\newpage
 \section{Conclusion}
 \label{sec:conclusion}
 
-As shown in Figure ??, the family of curves associated with the 4 $I_B$ currents loosely follow the typical plot of Bipolar Junction Transmitters (BJTs).  The mode of operation of the transistor transitions to the “forward-active mode” when $V_{CE}$ is approximately greater than \SI{0.2}{V}.  Also, as $I_B$ increases, the slope of the $I_C$ to $V_{CE}$ increases as seen in Table ??
+As shown in Figure ??, the family of curves associated with the four $I_B$ currents loosely follow the typical plot of Bipolar Junction Transmitters (BJTs).  The mode of operation of the transistor transitions to the “forward-active mode” when $V_{CE}$ is approximately greater than \SI{0.2}{V}.  Also, as $I_B$ increases, the slope of the $I_C$ to $V_{CE}$ increases as seen in Table ??
 
 Tables 2b, 2a1, 2a2, and 2a3 show that as $I_B$ increases, the ratio of $I_C$ to $I_B$ ($\beta$ [also known as the current gain]) increases.  But, this change in $\beta$ seems to “taper off” as the $I_B$ current (Table 2b) increases such that if one were to plot mean $\beta$ vs. $I_B$, it would resemble logarithmic growth.  For each of the values of $I_B$; as $I_C$ and $V_{CE}$ increase, $\beta$ increases as well (as shown in Table 2a).  If one were to plot mean $\beta$ vs. $V_{CE}$ , I suspect it would resemble exponential growth though there is minimal evidence to prove this, considering only three data points are provided in Tables 2a1, 2a2, and 2a3.
 
-Figure ?? shows the slope of each of the family of curves  for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance $h_{oe}$ was conducted with the slope of each of the 4 the trend line equations and the Equation ??.  As $I_B$ increased, $h_{oe}$ increased.   Therefore, as $I_B$ increased, current gain $\beta$ because the ouput resitance $r_o$ decreased.
+Figure ?? shows the slope of each of the family of curves  for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance $h_{oe}$ was conducted with the slope of each of the 4 the trend line equations and the Equation ??.  As $I_B$ increased, $h_{oe}$ increased.   Therefore, as $I_B$ increased, current gain $\beta$ because the output resistance $r_o$ decreased.
 
 \section{Equations}
 
