That's it for tonight.

--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -98,7 +98,7 @@ The following steps were observed to plot the output characteristic of a common 
     18       & 6.45      & 17.23    & 129.00  \\
     20       & 6.69      & 19.20    & 133.80  \\
   \end{tabular}
-  \caption{\label{tab2:}$I_B = $ \SI{50}{\micro\ampere}}
+  \caption{\label{tab:2}$I_B = $ \SI{50}{\micro\ampere}}
 \end{table}
 
 \begin{table}[hbtp]
@@ -244,9 +244,9 @@ The following steps were observed to plot the output characteristic of a common 
 
 As shown in Figure~\ref{fig:graph}, the family of curves associated with the four $I_B$ currents loosely follow the typical plots of Bipolar Junction Transistors (BJTs).  The mode of operation of the transistor transitions to the “forward-active mode” when $V_{CE}$ is  greater than approximately \SI{0.2}{V}.  Also, as $I_B$ increases, the slope of the $I_C$ to $V_{CE}$ increases.
 
-Tables 2b, 2a1, 2a2, and 2a3 show that as $I_B$ increases, the ratio of $I_C$ to $I_B$ ($\beta$ [also known as the current gain]) increases.  But, this change in $\beta$ seems to “taper off” as the $I_B$ current (Table 2b) increases such that if one were to plot mean $\beta$ vs. $I_B$, it would resemble logarithmic growth.  For each of the values of $I_B$; as $I_C$ and $V_{CE}$ increase, $\beta$ increases as well (as shown in Table 2a).  If one were to plot mean $\beta$ vs. $V_{CE}$ , I suspect it would resemble exponential growth though there is minimal evidence to prove this, considering only three data points are provided in Tables 2a1, 2a2, and 2a3.
+Tables \ref{tab:1}, \ref{tab:2}, \ref{tab:3}, and \ref{tab:4} show that as $I_B$ increases, the ratio of $I_C$ to $I_B$ (current gain, $\beta$) also increases.  This change in $\beta$ seems to ``taper off'' as $I_B$ increases such that if one were to plot mean $\beta$ vs. $I_B$, it would resemble logarithmic growth.  If one were to plot mean $\beta$ vs. $V_{CE}$ , I suspect it would resemble exponential growth though there is minimal evidence to prove this, considering only three data points are provided in Tables \ref{tab:da2a1}, \ref{tab:da2a2}, and \ref{tab:da2a3}.
 
-Figure ?? shows the slope of each of the family of curves  for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance $h_{oe}$ was conducted with the slope of each of the four the trend line equations and the Equation ??.  As $I_B$ increased, $h_{oe}$ increased.   Therefore, as $I_B$ increased, current gain $\beta$ because the output resistance $r_o$ decreased.
+Figure ?? shows the slope of each of the family of curves for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance ($h_{oe}$) was conducted with the slope of each of the four the trend line equations and Equation~\ref{eq:hoe}.  As $I_B$ increased, $h_{oe}$ increased.   %Therefore, as $I_B$ increased, current gain $\beta$ because the output resistance $r_o$ decreased.
 
 \section{Equations}
 
