--- a/school/elec_313/lab9/tex/header.tex
+++ b/school/elec_313/lab9/tex/header.tex
@@ -25,7 +25,7 @@
 \usepackage{subcaption}
 
 \author{}
-\title{ELEC-313 \\ Lab 8: Bipolar Junction Transistor Characterization\\ }
+\title{ELEC-313 \\ Lab 9: Common-Emitter Transistor Amplifier\\ }
 \date{\today}
 
 % \loadglsentries{acronyms} % Actually loads 'acronyms.tex'
@@ -37,7 +37,7 @@
 
 \begin{center}
   \begin{tabular}{lr}
-    Date Performed: & November 13, 2013 \\
+    Date Performed: & November 20, 2013 \\
     Partners:       & Charles Pittman    \\
     & Stephen Wilson     \\
   \end{tabular}
@@ -45,10 +45,10 @@
 
 \newpage
 
-\tableofcontents
-\listoffigures
-\listoftables
-\newpage
+%\tableofcontents
+%\listoffigures
+%\listoftables
+%\newpage
 
 % Number the enumerate environment (unordered lists) by letter:
 % \renewcommand{\labelenumi}{\alph{enumi}.}
