--- a/school/elec_313/lab9/tex/report.tex
+++ b/school/elec_313/lab9/tex/report.tex
@@ -3,13 +3,16 @@
 
 \section{Objective}
 
+The objective is to construct and observe the operation of a common-emitter transistor amplifier.
+
 \section{Equipment}
 
 \begin{tabular}{ll}
   \centering
-  Transistor: 2N2222A               & Power supply: HP E3631A            \\
-  Resistors: \SI{22}{\kilo\ohm}, \SI{33}{\kilo\ohm}, \SI{220}{\ohm} (x2) &   Capacitor: \SI{0.1}{\micro\farad} \\
- Multimeters: HP 34401A, Fluke 8010A (x2) & \\
+  Transistor: 2N2222A               &  Capacitor: \SI{0.1}{\micro\farad}           \\
+  Resistors: \SI{100}{\kilo\ohm}, \SI{20}{\kilo\ohm}, \SI{1}{\kilo\ohm}, \SI{470}{\ohm} &    Power supply: HP E3631A \\
+  Function generator: HP 33120  & Oscilloscope: Agilent 54622D \\
+  \multicolumn{2}{l}{Multimeters: HP 34401A, Fluke 8010A (x2)} \\
 \end{tabular}
 
 \section{Schematics}
