--- a/school/elec_313/lab9/tex/report.tex
+++ b/school/elec_313/lab9/tex/report.tex
@@ -71,6 +71,8 @@ The objective is to construct and observe the operation of a common-emitter tran
   \caption{\label{tab:amp_bypass} Transistor amplifier characteristics (with emitter bypass capacitor)}
 \end{table}
 
+%\newpage
+
 \section{Conclusion}
 \label{sec:conclusion}
 
