Added refs to procedure

--- a/school/elec_313/lab9/tex/report.tex
+++ b/school/elec_313/lab9/tex/report.tex
@@ -28,20 +28,20 @@ The following procedure was used to evaluate the transistor amplifier of Figure~
 
 \begin{enumerate}
 \item The circuit of Figure~\ref{fig:circuit} was constructed.
-\item The DC voltage at each terminal of the transistor was measured and the values were recorded in Table ??.
+\item The DC voltage at each terminal of the transistor was measured and the values were recorded in Table~\ref{tab:amp}.
 \item The output of the function generator was connected to the input of the circuit. Then the function generator was set to a frequency of \SI{30}{\kilo\hertz} as a sine wave.
 \item Channel 1 of the oscilloscope was connected to the input of the circuit and channel 2 connected to the output.
 \item The amplitude of the sinusoidal waveform was adjusted to -\SI{250}{mV} to +\SI{250}{mV} (\SI{500}{mVpp}) at the circuit input as measured on the oscilloscope.
-\item The peak-to-peak amplitude of the output waveform ($V_o$) was measured and recorded in Table ??.
-\item Then, the voltage gain ($A_V$) of the amplifier was computed at \SI{30}{\kilo\hertz} and recorded in Table ??.
-\item The decade resistance box was connected to the output of the circuit. Then the resistance was adjusted until the output voltage read as one-half the open circuit value measured in step 6. The displayed resistance value, which is also equivalent to the output resistance (Ro) of the circuit, was recorded in Table ??.
-\item The function generator was disconnected from the circuit input and then connected to the oscilloscope to measure the open circuit voltage ($V_{OC}$) produced by the generator. The open-circuit voltage was recorded in Table ??.
+\item The peak-to-peak amplitude of the output waveform ($V_o$) was measured and recorded in Table~\ref{tab:amp}.
+\item Then the voltage gain ($A_V$) of the amplifier was computed at \SI{30}{\kilo\hertz} and recorded in Table~\ref{tab:amp}.
+\item The decade resistance box was connected to the output of the circuit. Then the resistance was adjusted until the output voltage read as one-half the open circuit value measured in step 6. The displayed resistance value, which is also equivalent to the output resistance ($R_o$) of the circuit, was recorded in Table~\ref{tab:imp}.
+\item The function generator was disconnected from the circuit input and then connected to the oscilloscope to measure the open circuit voltage ($V_{OC}$) produced by the generator. The open-circuit voltage was recorded in Table~\ref{tab:imp}.
 \item The decade box was removed from the output and reconnected between the function generator and the open circuit input, so that the signal travels from the function generator and through the resistance box on its way to the circuit input.
-\item The decade resistance box was adjusted so that the voltage measured at the circuit input is one-half the open circuit voltage measured in step 9. That displayed resistance is \SI{50}{\ohm} less than the input resistance ($R_i$) of the circuit. The input resistance was recorded in Table ??.
+\item The decade resistance box was adjusted so that the voltage measured at the circuit input is one-half the open circuit voltage measured in step 9. That displayed resistance is \SI{50}{\ohm} less than the input resistance ($R_i$) of the circuit. The input resistance was recorded in Table~\ref{tab:lrg_sig}.
 \item The decade resistance box was removed and the function generator was reconnected directly to the circuit input, and its frequency was left at \SI{30}{\kilo\hertz}.
-\item The amplitude of the generator was slowly increased while the output waveform was carefully observed to determine the point at which the output waveform began to clip ($V_{clip}$). The peak-to-peak voltage was recorded in Table ??.
+\item The amplitude of the generator was slowly increased while the output waveform was carefully observed to determine the point at which the output waveform began to clip ($V_{clip}$). The peak-to-peak voltage was recorded in Table~\ref{tab:lrg_sig}.
 \item The \SI{10}{\micro\farad} emitter bypass capacitor was inserted into the circuit.
-\item Steps 2 through 7 were repeated, except the input voltage was first reduced until the waveform didn’t clip. The input voltage was recorded in Table ?? and the measurements from steps 2 through 7 was recorded in Table ??.
+\item Steps 2 through 7 were repeated, except the input voltage was first reduced until the waveform didn’t clip, and values recorded in Table~\ref{tab:amp_bypass}
 \end{enumerate}
 \section{Results}
 
@@ -94,9 +94,9 @@ The following procedure was used to evaluate the transistor amplifier of Figure~
 \section{Conclusion}
 \label{sec:conclusion}
 
-As seen in Table X, the small signal voltage gain $A_V$ increased once the emitter bypass capacitor was added, even though it had relatively insignificant impact to the DC voltages of each terminal. The DC voltages shouldn’t change because the capacitor that was added is ideally an open circuit to the DC voltage which would offer no new path for the DC current to take. But the emitter bypass resistor has a significant impact to the AC analysis because it is seen as a closed circuit and allows the $I_E$ to pass “un-resisted” through the capacitor. As seen in Eq~\ref{eq:gm2}, the addition of the emitter bypass capacitor, reduced the denominator of the $A_V$ Eq~\ref{eq:Av1}, thus increasing gain.
+As seen in Table~\ref{tab:amp_bypass}, the small signal voltage gain $A_V$ increased once the emitter bypass capacitor was added, even though it had relatively insignificant impact to the DC voltages of each terminal. The DC voltages shouldn’t change because the capacitor that was added is ideally an open circuit. But the emitter bypass resistor has a significant impact to the AC analysis because it is seen as a closed circuit and allows the $I_E$ to pass through. As seen in Eq~\ref{eq:gm2}, the addition of the emitter bypass capacitor, reduced the denominator of the $A_V$ Eq~\ref{eq:Av1}, thus increasing gain.
 
-Table Y shows the percent difference of the theoretical input and output impedances ($R_i$ and $R_o$ respectively) and the small signal gains of the circuits of Part I and Part II of the experiment which were calculated using equations 1 through 7. $R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value. The 5.7 percent difference between the $A_V$ for Part I is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (both were given in the pre lab section of the lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage difference between the 12 V input (see Figure ??) and the 9.547 VC terminal (see Table ??) divided by the \SI{1}{\kilo\ohm} resistor would have generated a smaller current than \SI{3}{mA}. Their is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ in Part II. Eq~\ref{eq:gm2} shows that the calculcated $A_V$ is more effected the $I_{CQ}$ value, which as explained earlier was probably less than the assumed \SI{3}{mA}. Also, the assumption that $r_o$ is infinite and therefore an open circuit is not totally true (which was the assumption made in when calculating the theoretical voltage gain). The resistance of $r_o$ in parallel with RC this would actually have been slightly less than the $R_o$ used in the theoretical calculations. Also, we could have accidentally not reduced the voltage enough such that it was clipped as described in step 15.
+Table Y shows the percent difference of the theoretical input and output impedances ($R_i$ and $R_o$ respectively) and the small signal gains of the circuits of Part I and Part II of the experiment which were calculated using equations 1 through 7. $R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value. The 5.7 percent difference between the $A_V$ for Part I is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (both were given in the pre lab section of the lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage difference between the \SI{12}{V} input (see Figure ??) and the 9.547 $V_C$ terminal (see Table ??) divided by the \SI{1}{\kilo\ohm} resistor would have generated a smaller current than \SI{3}{mA}. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ in Part II. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, the assumption that $r_o$ is infinite and therefore an open circuit is not totally true (which was the assumption made in when calculating the theoretical voltage gain). The resistance of $r_o$ in parallel with RC this would actually have been slightly less than the $R_o$ used in the theoretical calculations. Also, we could have accidentally not reduced the voltage enough such that it was clipped as described in step 15.
 
 Table Y shows the $V_{OC}$ recorded during step 9. It is less than \SI{500}{mV} probably because of “noise” could have affected the output reading. The table also shows the $V_{clip}$, which is the point at which the output voltage began to clip (see step 13). This clipping of the voltage happens when the transistor is saturated in which the current cannot go any higher.
 
