--- a/school/elec_313/lab9/tex/report.tex
+++ b/school/elec_313/lab9/tex/report.tex
@@ -43,6 +43,7 @@ The following procedure was used to evaluate the transistor amplifier of Figure~
 \item The \SI{10}{\micro\farad} emitter bypass capacitor was inserted into the circuit.
 \item Steps 2 through 7 were repeated, except the input voltage was first reduced until the waveform didn’t clip, and values recorded in Table~\ref{tab:amp_bypass}
 \end{enumerate}
+
 \section{Results}
 
 \begin{table}[hbtp]
@@ -89,16 +90,29 @@ The following procedure was used to evaluate the transistor amplifier of Figure~
   \caption{\label{tab:amp_bypass} Transistor amplifier characteristics (with emitter bypass capacitor)}
 \end{table}
 
-%\newpage
+\begin{table}[hbtp]
+  \centering
+  \begin{tabular}{c|ccc}
+    & Measured & Calculated & \% Diff. \\
+    \hline
+    $R_o$ & \SI{958}{\ohm} & \SI{1}{\kilo\ohm} & 4.20\% \\
+    $R_o$ & \SI{13.95}{\kilo\ohm} & \SI{13.543}{\kilo\ohm} & 3.01\% \\
+    $A_V$ (no bypass) & -1.94 & -2.06 & 5.83\$ \\
+    $A_V$ (with bypass) & -50.9 & -111 & 54.14\% \\
+  \end{tabular}
+  \caption{\label{tab:gains} Percent differences}
+\end{table}
+
+\newpage
 
 \section{Conclusion}
 \label{sec:conclusion}
 
 As seen in Table~\ref{tab:amp_bypass}, the small signal voltage gain $A_V$ increased once the emitter bypass capacitor was added, even though it had relatively insignificant impact to the DC voltages of each terminal. The DC voltages shouldn’t change because the capacitor that was added is ideally an open circuit. But the emitter bypass resistor has a significant impact to the AC analysis because it is seen as a closed circuit and allows the $I_E$ to pass through. As seen in Eq~\ref{eq:gm2}, the addition of the emitter bypass capacitor, reduced the denominator of the $A_V$ Eq~\ref{eq:Av1}, thus increasing gain.
 
-Table Y shows the percent difference of the theoretical input and output impedances ($R_i$ and $R_o$ respectively) and the small signal gains of the circuits of Part I and Part II of the experiment which were calculated using equations 1 through 7. $R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value. The 5.7 percent difference between the $A_V$ for Part I is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (both were given in the pre lab section of the lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage difference between the \SI{12}{V} input (see Figure ??) and the 9.547 $V_C$ terminal (see Table ??) divided by the \SI{1}{\kilo\ohm} resistor would have generated a smaller current than \SI{3}{mA}. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ in Part II. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, the assumption that $r_o$ is infinite and therefore an open circuit is not totally true (which was the assumption made in when calculating the theoretical voltage gain). The resistance of $r_o$ in parallel with RC this would actually have been slightly less than the $R_o$ used in the theoretical calculations. Also, we could have accidentally not reduced the voltage enough such that it was clipped as described in step 15.
+Table Y shows the percent difference of the theoretical input and output impedances ($R_i$ and $R_o$ respectively) and the small signal gains of the circuit with and without the bypass capacitor. $R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value. The 5.7 percent difference between the $A_V$ for Part I is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (both were given in the pre lab section of the lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage difference between the \SI{12}{V} input (see Figure ??) and the 9.547 $V_C$ terminal (see Table ??) divided by the \SI{1}{\kilo\ohm} resistor would have generated a smaller current than \SI{3}{mA}. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ in Part II. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, the assumption that $r_o$ is infinite and therefore an open circuit is not totally true (which was the assumption made in when calculating the theoretical voltage gain). The resistance of $r_o$ in parallel with $R_C$ this would actually have been slightly less than the $R_o$ used in the theoretical calculations.
 
-Table Y shows the $V_{OC}$ recorded during step 9. It is less than \SI{500}{mV} probably because of “noise” could have affected the output reading. The table also shows the $V_{clip}$, which is the point at which the output voltage began to clip (see step 13). This clipping of the voltage happens when the transistor is saturated in which the current cannot go any higher.
+% Table Y shows the $V_{OC}$ recorded during step 9. It is less than \SI{500}{mV} probably because of “noise” could have affected the output reading. The table also shows the $V_{clip}$, which is the point at which the output voltage began to clip (when the transistor is at saturation).
 
 \section{Equations}
 
