Added refs to procedure

--- a/school/elec_313/lab9/tex/report.tex
+++ b/school/elec_313/lab9/tex/report.tex
@@ -110,9 +110,12 @@ The following procedure was used to evaluate the transistor amplifier of Figure~
 
 As seen in Table~\ref{tab:amp_bypass}, the small signal voltage gain $A_V$ increased once the emitter bypass capacitor was added, even though it had relatively insignificant impact to the DC voltages of each terminal. The DC voltages shouldn’t change because the capacitor that was added is ideally an open circuit. But the emitter bypass resistor has a significant impact to the AC analysis because it is seen as a closed circuit and allows the $I_E$ to pass through. As seen in Eq~\ref{eq:gm2}, the addition of the emitter bypass capacitor, reduced the denominator of the $A_V$ Eq~\ref{eq:Av1}, thus increasing gain.
 
-Table Y shows the percent difference of the theoretical input and output impedances ($R_i$ and $R_o$ respectively) and the small signal gains of the circuit with and without the bypass capacitor. $R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value. The 5.7 percent difference between the $A_V$ for Part I is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (both were given in the pre lab section of the lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage difference between the \SI{12}{V} input (see Figure ??) and the 9.547 $V_C$ terminal (see Table ??) divided by the \SI{1}{\kilo\ohm} resistor would have generated a smaller current than \SI{3}{mA}. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ in Part II. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, the assumption that $r_o$ is infinite and therefore an open circuit is not totally true (which was the assumption made in when calculating the theoretical voltage gain). The resistance of $r_o$ in parallel with $R_C$ this would actually have been slightly less than the $R_o$ used in the theoretical calculations.
+%REMINDER: fix the references to "Part I-II"
+Table~\ref{tab:gains} shows the percent differences of the input and output impedances ($R_i$ and $R_o$) and the small signal gains of the circuit with and without the bypass capacitor.
+The 5.7 percent difference between the $A_V$ for Part I is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (from the in the pre-lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage drop between the \SI{12}{VDC} input and terminal C is smaller. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ in Part II. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, when calculating the theoretical votage gain, $r_o$ is assumed to be infinite (i.e. an open circuit). %<Not sure what you were saying>The resistance of $r_o$ in parallel with $R_C$ this would actually have been slightly less than the $R_o$ used in the theoretical calculations.
 
-% Table Y shows the $V_{OC}$ recorded during step 9. It is less than \SI{500}{mV} probably because of “noise” could have affected the output reading. The table also shows the $V_{clip}$, which is the point at which the output voltage began to clip (when the transistor is at saturation).
+%$R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value.
+% Table~\ref{tab:gains} shows the $V_{OC}$ recorded during step 9. It is less than \SI{500}{mV} probably because of “noise” could have affected the output reading. The table also shows the $V_{clip}$, which is the point at which the output voltage began to clip (when the transistor is at saturation).
 
 \section{Equations}
 
